[gd_scene load_steps=17 format=1]

[ext_resource path="res://Smashbounce.gd" type="Script" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://mace.gd" type="Script" id=4]
[ext_resource path="res://mace.png" type="Texture" id=5]
[ext_resource path="res://ground.gd" type="Script" id=6]
[ext_resource path="res://ball.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5, 5 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 26.0

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 307.36, -1042.77, 316.678, -907.663, -5.4632, -949.476, -57.8884, -1103.34 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -80.23, 42.467, -80.23, -5.85205, -57.8884, -1103.34, -5.4632, -949.476, 0.658508, 1031.28, -79.313, 1168.67 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 712.201, 1156.37, -79.313, 1168.67, 0.658508, 1031.28, 601.471, 1029.23 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 709.613, -51.408, 712.201, 1156.37, 601.471, 1029.23, 589.714, -916.981, 654.94, -1056.75 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( 372.586, -1047.43, 654.94, -1056.75, 589.714, -916.981, 361.422, -907.663 )

[sub_resource type="CircleShape2D" id=8]

custom_solver_bias = 0.0
radius = 38.5

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 100, 10 )

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Player" type="RigidBody2D" parent="."]

transform/pos = Vector2( 419.643, 553.067 )
input/pickable = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]

texture = ExtResource( 3 )

[node name="Joint1" type="PinJoint2D" parent="."]

transform/pos = Vector2( 420.643, 558.067 )
node_a = NodePath("../Player")
node_b = NodePath("../Link1")
bias/bias = 0.0
collision/exclude_nodes = true
softness = 0.0

[node name="Link1" type="RigidBody2D" parent="."]

transform/pos = Vector2( 419.926, 602.256 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="Sprite1" type="Sprite" parent="Link1"]

transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="RigidBody2D" type="CollisionShape2D" parent="Link1"]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Joint2" type="PinJoint2D" parent="."]

transform/pos = Vector2( 419.926, 620.256 )
node_a = NodePath("../Link1")
node_b = NodePath("../Link2")
bias/bias = 0.0
collision/exclude_nodes = true
softness = 0.0

[node name="Link2" type="RigidBody2D" parent="."]

transform/pos = Vector2( 419.926, 632.256 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="Sprite1" type="Sprite" parent="Link2"]

transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="RigidBody2D1" type="CollisionShape2D" parent="Link2"]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Joint3" type="PinJoint2D" parent="."]

transform/pos = Vector2( 419.926, 650.256 )
node_a = NodePath("../Link2")
node_b = NodePath("../Link3")
bias/bias = 0.0
collision/exclude_nodes = true
softness = 0.0

[node name="Link3" type="RigidBody2D" parent="."]

transform/pos = Vector2( 419.926, 658.256 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0

[node name="Sprite1" type="Sprite" parent="Link3"]

transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="RigidBody2D1" type="CollisionShape2D" parent="Link3"]

shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="Joint4" type="PinJoint2D" parent="."]

transform/pos = Vector2( 419.926, 677.256 )
node_a = NodePath("../Link3")
node_b = NodePath("../Mace")
bias/bias = 0.0
collision/exclude_nodes = true
softness = 0.0

[node name="Mace" type="RigidBody2D" parent="."]

transform/pos = Vector2( 419.926, 702.764 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 5.10204
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Mace"]

transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mace"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Ground" type="StaticBody2D" parent="."]

transform/pos = Vector2( -0.71698, 31.1884 )
input/pickable = false
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 4 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 5 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 6 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 7 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground"]

build_mode = 0
polygon = Vector2Array( -80.23, -5.85205, -80.23, 42.467, -79.313, 1168.67, 712.201, 1156.37, 709.613, -51.408, 654.94, -1056.75, 372.586, -1047.43, 361.422, -907.663, 589.714, -916.981, 601.471, 1029.23, 0.658508, 1031.28, -5.4632, -949.476, 316.678, -907.663, 307.36, -1042.77, -57.8884, -1103.34 )
shape_range = Vector2( 0, 4 )
trigger = false

[node name="Ball" type="RigidBody2D" parent="."]

transform/pos = Vector2( 273.163, 71.7778 )
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 10.0
friction = 1.0
bounce = 1.0
gravity_scale = 3.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Ball"]

transform/scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]

shape = SubResource( 8 )
trigger = false
_update_shape_index = 0

[node name="Particles2D" type="Particles2D" parent="."]

transform/pos = Vector2( 302.906, 522.359 )
config/amount = 64
config/lifetime = 2.0
config/process_mode = 1
config/half_extents = Vector2( 300, 512 )
params/direction = 0.0
params/spread = 10.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 255.0
margin/top = 91.0
margin/right = 326.0
margin/bottom = 105.0
text = "Bounces: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Bottom" type="StaticBody2D" parent="."]

transform/pos = Vector2( 302.976, 1028.01 )
input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( -3, 4.52987e-07, -1.50996e-07, -1, -1.85055, 16.6556 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]

transform/pos = Vector2( -1.85055, 16.6556 )
transform/rot = -180.0
transform/scale = Vector2( 3, 1 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="Ball" to="." method="_on_Ball_body_enter"]


